--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<body><h1>hello</h1></body>
+<meta http-equiv="Refresh" content="0; url='/.well-known/mta-sts.txt'" />
+<a href="/.well-known/mta-sts.txt">/.well-known/mta-sts.txt</a>
